Fixing spacing and adding social media icons effects

--- a/src/pages/BlogDetails/BlogDetails.scss
+++ b/src/pages/BlogDetails/BlogDetails.scss
@@ -5,8 +5,9 @@
     @include minMedium {
 
         display: grid;
-        grid-template-columns: 1fr 3fr;    
-        margin-top: 40px;
+        grid-template-columns: 1fr 3fr;   
+        grid-template-rows: min-content; 
+        margin-top: 125px;
 
     }
     
@@ -26,6 +27,7 @@
         
         padding: 0 1rem;
         display: grid;
+        grid-auto-rows: min-content;
         margin-top: 80px;
 
         @include minMedium {
@@ -50,8 +52,18 @@
     }
 
     &-snippet {
-    
+        
         margin: 30px 0;
+
+        &:nth-child(1) {
+            
+            @include minLarge {
+
+                margin: 0 0 30px 0;
+
+            }
+            
+        }
 
     }
 
@@ -70,7 +82,7 @@
     @include minMedium {
 
         grid-column: 1;
-        grid-row: 1;
+        grid-row: 1 / 3;
 
     }
 
@@ -162,7 +174,7 @@ hr {
     @include minMedium {
 
         grid-column: 1;
-        grid-row: 1;
+        grid-row: 1 / 3;
         margin-top: 125px;
 
     }
@@ -185,7 +197,7 @@ hr {
         @include minLarge {
 
             grid-template-columns: repeat(6, 1fr);
-            column-gap: 0;
+            column-gap: 4px;
         
         }
 
@@ -200,12 +212,17 @@ hr {
 
             @include minLarge {
 
-                height: auto;
-                justify-content: start;
-                background-color: white;
-
+                padding-top: 4px;
+                height: 35px;
+                background-color: #FFF
+                
             }
-
+                        
+            &:hover {
+                background-color: #F6F6F6;
+                
+            }
+        
         }
 
     }
@@ -219,15 +236,15 @@ hr {
 
     @include minMedium {
     
-        grid-row: 1;
         grid-column: 1;
+        grid-row: 1 / 3;
         margin: 300px 0 0 0;    
 
     }
 
     @include minLarge {
 
-        margin-top: 240px;
+        margin: 240px 0 0 0;
 
     }
 
@@ -257,10 +274,16 @@ hr {
     &-container {
      
         display: grid;
-        column-gap: 12px;
-        grid-template-columns: repeat(2, 1fr);
+        row-gap: 50px;
+        // grid-template-columns: repeat(2, 1fr);
         margin-top: 24px;
         
+        @include minSmall {
+
+            grid-template-columns: repeat(2, 1fr);
+            column-gap: 12px;
+
+        }
     }
 
     &-article {
@@ -296,61 +319,15 @@ hr {
 
 }
 
-.latest-blog {
+#blogs {
 
     display: none;
-    
+
     @include minLarge {
 
-        margin-top: 60px;
         display: block;
 
     }
-
-    &-title {
-
-        color: #ffffff80;
-
-    }
-
-    &-container {
-
-        background-color: $color_main__text;
-        color: white;
-
-        &-inside {
-
-            
-            padding: 0 1rem;
-        }
-
-    }
-
-    &-header {
-
-        margin: 24px 0 45px 0;
-        display: flex;
-        justify-content: space-between;
-
-        &-title {
-
-            font-size: 24px;
-            font-weight: bold;
-            align-self: center;
-
-        }
-
-    }
-
-    &-blogs {
-
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        column-gap: 30px;
-        padding-bottom: 140px;
-
-    }
-
 }
 
 #footer-triangle {
